# dlxnet

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  TODO.md
dlxnet/cc/framework/: ops.cc  ops.h  scope.cc  scope.h  scope_internal.h
dlxnet/cc/ops/: array_ops.cc  array_ops.h  const_op.cc  const_op.h
dlxnet/core/common_runtime/: bfc_allocator.cc  bfc_allocator.h  build_graph_options.h  colocation_graph.cc  colocation_graph.h  copy_tensor.cc  copy_tensor.h  device.cc  device.h  device_factory.cc  device_factory.h  device_mgr.cc  device_mgr.h  device_set.cc  device_set.h  direct_session.cc  direct_session.h  dma_helper.h  executor.cc  executor.h  executor_factory.cc  executor_factory.h  gpu_device_context.h  graph_constructor.h  graph_execution_state.cc  graph_execution_state.h  graph_optimizer.cc  graph_optimizer.h  local_device.cc  local_device.h  optimization_registry.cc  optimization_registry.h  placer.cc  placer.h  placer_inspection_required_ops_utils.cc  placer_inspection_required_ops_utils.h  pool_allocator.cc  pool_allocator.h  process_state.cc  process_state.h  (+14 more)
dlxnet/core/common_runtime/gpu/: gpu_bfc_allocator.cc  gpu_bfc_allocator.h  gpu_cudamalloc_allocator.cc  gpu_cudamalloc_allocator.h  gpu_device.cc  gpu_device.h  gpu_device_factory.cc  gpu_id.h  gpu_id_manager.cc  gpu_id_manager.h  gpu_id_utils.h  gpu_init.cc  gpu_init.h  gpu_mem_allocator.h  gpu_process_state.cc  gpu_process_state.h  gpu_util.cc  gpu_util.h  gpu_util_platform_specific.cc
dlxnet/core/framework/: allocation_description.proto  allocator.cc  allocator.h  allocator_registry.cc  allocator_registry.h  api_def.proto  attr_value.proto  attr_value_util.cc  attr_value_util.h  common_shape_fns.cc  common_shape_fns.h  control_flow.h  cost_graph.proto  cpu_allocator_impl.cc  device_attributes.proto  device_base.cc  device_base.h  function.cc  function.h  function.proto  graph.proto  kernel_def.proto  kernel_def_builder.cc  kernel_def_builder.h  kernel_def_util.cc  kernel_def_util.h  local_rendezvous.cc  local_rendezvous.h  log_memory.cc  log_memory.h  log_memory.proto  logging.cc  logging.h  memory_types.cc  memory_types.h  node_def.proto  node_def_builder.cc  node_def_builder.h  node_def_util.cc  node_def_util.h  (+36 more)
dlxnet/core/graph/: default_device.h  edgeset.cc  edgeset.h  graph.cc  graph.h  graph_constructor.cc  graph_constructor.h  graph_partition.cc  graph_partition.h  node_builder.cc  node_builder.h  subgraph.cc  subgraph.h  tensor_id.cc  tensor_id.h  types.h
dlxnet/core/kernels/: constant_op.cc  constant_op.h  function_ops.cc  function_ops.h  gpu_utils.cc  gpu_utils.h  matmul_ops.cc  matmul_ops.h  sendrecv_ops.cc  sendrecv_ops.h
dlxnet/core/lib/: error_codes.proto  status.h  stringpiece.h  stringprintf.h
dlxnet/core/lib/core/: arena.cc  arena.h  coding.cc  coding.h  errors.h  notification.h  refcount.h  status.h  stringpiece.h  threadpool.h  threadpool_interface.h  threadpool_options.h  threadpool_test.cc
dlxnet/core/lib/gtl/: array_slice.h  flatmap.h  flatrep.h  flatset.h  inlined_vector.h  iterator_range.h  manual_constructor.h  map_util.h
dlxnet/core/lib/hash/: hash.h
dlxnet/core/lib/io/: path.h
dlxnet/core/lib/random/: random.h
dlxnet/core/lib/strings/: numbers.h  proto_serialization.cc  proto_serialization.h  proto_text_util.cc  proto_text_util.h  scanner.h  str_util.h  strcat.h
dlxnet/core/ops/: arrays_op.cc  function_ops.cc  math_ops.cc  nn_ops.cc  sendrecv_ops.cc
dlxnet/core/platform/: abi.cc  abi.h  blocking_counter.h  byte_order.h  context.h  cord.h  cpu_info.cc  cpu_info.h  denormal.cc  denormal.h  dynamic_annotations.h  env.cc  env.h  env_time.h  error.cc  error.h  errors.h  file_statistics.h  file_system.cc  file_system.h  file_system_helper.cc  file_system_helper.h  hash.cc  hash.h  host_info.h  init_main.h  load_library.h  logging.h  logging_test.cc  macros.h  mem.h  mutex.h  net.h  notification.h  numa.h  numbers.cc  numbers.h  numbers_test.cc  path.cc  path.h  (+39 more)
dlxnet/core/platform/default/: context.h  cord.h  dynamic_annotations.h  env.cc  env_time.cc  integral_types.h  load_library.cc  logging.cc  logging.h  mutex.cc  mutex.h  mutex_data.h  net.cc  notification.h  port.cc  posix_file_system.cc  posix_file_system.h  stacktrace.h  test.cc  (+5 more)
dlxnet/core/protobuf/: cluster.proto  config.proto  debug.proto  error_codes.proto  rewriter_config.proto  verifier_config.proto
dlxnet/core/public/: session.h  session_options.h
dlxnet/core/util/: command_line_flags.cc  command_line_flags.h  device_name_utils.cc  device_name_utils.h  env_var.cc  env_var.h  ptr_util.h  reporter.cc  reporter.h  tensor_format.cc  tensor_format.h  test_log.proto  work_sharder.cc  work_sharder.h
dlxnet/example/: build_graph.cc  demo_main.cc  demo_se.cc  test_main.cc
dlxnet/example/cl/: matmul.ocl  mystery_add.ocl
dlxnet/stream_executor/: allocator_stats.cc  allocator_stats.h  device_description.cc  device_description.h  device_memory.h  device_memory_allocator.h  device_options.h  event.cc  event.h  executor_cache.cc  executor_cache.h  kernel.cc  kernel.h  kernel_cache_config.h  kernel_spec.cc  kernel_spec.h  launch_dim.h  multi_platform_manager.cc  multi_platform_manager.h  platform.cc  platform.h  plugin.cc  plugin.h  shared_memory_config.h  stream.cc  stream.h  stream_executor.cc  stream_executor.h  stream_executor_internal.h  timer.cc  timer.h  trace_listener.h
dlxnet/stream_executor/cuda/: cuda_platform.cc  cuda_platform.h
dlxnet/stream_executor/gpu/: gpu_types.h
dlxnet/stream_executor/lib/: array_slice.h  demangle.cc  demangle.h  env.h  error.h  human_readable.h  initialize.h  status.h  status_macros.h  statusor.cc  statusor.h  statusor_internals.h  thread_options.h  threadpool.h
dlxnet/stream_executor/opencl/: ocl_driver.cc  ocl_driver.h  ocl_event.cc  ocl_event.h  ocl_gpu_executor.cc  ocl_gpu_executor.h  ocl_kernel.h  ocl_platform.cc  ocl_platform.h  ocl_stream.cc  ocl_stream.h
dlxnet/stream_executor/platform/: initialize.h  logging.h  platform.h  port.h  thread_annotations.h
scripts/: build_protos.sh
tools/converter/: README.md
tools/quantizer/: README.md
(+2 files in other folders)
